--- a/application7/src/client/www/pages/notification.html
+++ b/application7/src/client/www/pages/notification.html
@@ -16,14 +16,14 @@
       <div class="list links-list">
         <ul>
           {{#each myfriends}}
-          <li>{{expediteurNom}} {{expediteurPrenom}} </li>
-          <li>Statut de la demande : {{statut}}</li>
-          {{#js_if "this.statut === 'en attente'"}}
-            <div class="block block-strong row">
-              <div class="col"><a class="button convert-form-to-data" href="#" @click="accepter('{{expediteur}}','{{expediteurNom}}','{{expediteurPrenom}}','{{destinataireNom}}','{{destinatairePrenom}}')">Accepter l'invitation</a></div>
-              <div class="col"><a class="button convert-form-to-data" href="#" @click="refuser('{{expediteur}}','{{expediteurNom}}','{{expediteurPrenom}}','{{destinataireNom}}','{{destinatairePrenom}}')">Refuser l'invitation</a></div>
-            </div>
-          {{/js_if}}
+            <li>{{senderSurname}} {{senderName}} </li>
+            <li>Status of the invitation : {{status}}</li>
+            {{#js_if "this.status === 'pending'"}}
+              <div class="block block-strong row">
+                <div class="col"><a class="button convert-form-to-data" href="#" @click="accepter('{{senderId}}','{{senderSurname}}','{{senderName}}','{{receiverSurname}}','{{receiverName}}')">Accepter l'invitation</a></div>
+                <div class="col"><a class="button convert-form-to-data" href="#" @click="refuser('{{senderId}}','{{senderSurname}}','{{senderName}}','{{receiverSurname}}','{{receiverName}}')">Refuser l'invitation</a></div>
+              </div>
+            {{/js_if}}
           {{/each}}
         </ul>
       </div>
@@ -35,7 +35,7 @@ return{
   async data(){
     let myfriends = [];
     try {
-      myfriends = await fetch("http://localhost:3000/friend")
+      myfriends = await fetch("http://localhost:3000/friends")
           .then(res => res.json())
     }
     catch(err) {
@@ -45,18 +45,18 @@ return{
       let i = myfriends.length-1
       //for (var i=0;i<myfriends.length;i++){
       while(i>=0){
-        if(myfriends[i].statut === 'accepted' && myfriends[i].expediteur === this.$route.params.myid){
-          this.$app.dialog.alert(myfriends[i].destinataireNom + ' ' + myfriends[i].destinatairePrenom + " a accepté votre demande d'ajouts")
+        if(myfriends[i].status === 'accepted' && myfriends[i].senderId === this.$route.params.myid){
+          this.$app.dialog.alert(myfriends[i].receiverSurname + ' ' + myfriends[i].receiverName + " a accepté votre demande d'ajouts")
           enleve_friend = myfriends.splice(i,1);
         }
-        else if(myfriends[i].statut === 'refused' && myfriends[i].expediteur === this.$route.params.myid){
-            this.$app.dialog.alert(myfriends[i].destinataireNom + ' ' + myfriends[i].destinatairePrenom + " a refusé votre demande d'ajouts")
+        else if(myfriends[i].status === 'refused' && myfriends[i].senderId === this.$route.params.myid){
+            this.$app.dialog.alert(myfriends[i].receiverSurname + ' ' + myfriends[i].receiverName + " a refusé votre demande d'ajouts")
             enleve_friend1 = myfriends.splice(i,1);
         }
-        else if(myfriends[i].statut === 'en attente' && myfriends[i].expediteur === this.$route.params.myid){
+        else if(myfriends[i].status === 'pending' && myfriends[i].senderId === this.$route.params.myid){
             enleve_friend2 = myfriends.splice(i,1);
         }
-        else if(myfriends[i].expediteur !== this.$route.params.myid && myfriends[i].destinaireid !== this.$route.params.myid){
+        else if(myfriends[i].senderId !== this.$route.params.myid && myfriends[i].receiverId !== this.$route.params.myid){
           enleve_friend3 = myfriends.splice(i,1);
         }
         i=i-1
@@ -67,18 +67,18 @@ return{
   methods : {
     accepter: function(idexp,nomexp,prenomexp,nomdest,prenomdest){
       for(var i=0 ; i < this.myfriends.length ; i++){
-        if(this.myfriends[i].expediteur === idexp && this.myfriends[i].destinaireid === this.$route.params.myid){
-          fetch('http://localhost:3000/friend', {
+        if(this.myfriends[i].senderId === idexp && this.myfriends[i].receiverId === this.$route.params.myid){
+          fetch('http://localhost:3000/updateinvite', {
               method: 'PUT',
               headers: { "Content-Type": "application/json" },
               body: JSON.stringify({
-                myyid:this.$route.params.myid,
-                idexpediteur:idexp,
-                nomexpediteur:nomexp,
-                prenomexpediteur:prenomexp,
-                nomdestinataire:nomdest,
-                prenomdestinataire:prenomdest,
-                statut:'accepted',
+                senderId        : this.$route.params.myid,
+                receiverId      : idexp,
+                senderSurname   : nomexp,
+                senderName      : prenomexp,
+                receiverSurname : nomdest,
+                receiverName    : prenomdest,
+                status          : 'accepted',
               })
           })
           .catch(err => this.$app.dialog.alert('Error ' + err))
@@ -96,18 +96,18 @@ return{
     },
     refuser: function(idexp,nomexp,prenomexp,nomdest,prenomdest){
       for(var i=0;i<this.myfriends.length;i++){
-        if(this.myfriends[i].expediteur === idexp && this.myfriends[i].destinaireid === this.$route.params.myid){
-          fetch('http://localhost:3000/friend', {
+        if(this.myfriends[i].senderId === idexp && this.myfriends[i].receiverId === this.$route.params.myid){
+          fetch('http://localhost:3000/updateinvit', {
               method: 'PUT',
               headers: { "Content-Type": "application/json" },
               body: JSON.stringify({
-                myyid:this.$route.params.myid,
-                idexpediteur:idexp,
-                nomexpediteur:nomexp,
-                prenomexpediteur:prenomexp,
-                nomdestinataire:nomdest,
-                prenomdestinataire:prenomdest,
-                statut:'refused',
+                senderId        : this.$route.params.myid,
+                receiverId      : idexp,
+                senderSurname   : nomexp,
+                senderName      : prenomexp,
+                receiverSurname : nomdest,
+                receiverName    : prenomdest,
+                status          : 'refused',
               })
           })
           .catch(err => this.$app.dialog.alert('Error ' + err))
