--- a/application7/src/client/www/pages/profil.html
+++ b/application7/src/client/www/pages/profil.html
@@ -18,19 +18,19 @@
       <div class="list links-list">
         <ul>
           {{#each friends}}
-          {{#js_if "this.expediteur ===  ../../$route.params.idd"}}
-            <a href="#"><li>{{destinataireNom}} {{destinatairePrenom}} </li></a>
+          {{#js_if "this.senderId ===  ../../$route.params.idd"}}
+            <a href="#"><li>{{receiverSurname}} {{receiverName}} </li></a>
           {{else}}
-            {{#js_if "this.destinaireid === ../../$route.params.idd"}}
-            <a href="#"><li>{{expediteurNom}} {{expediteurPrenom}} </li></a>
+            {{#js_if "this.receiverId === ../../$route.params.idd"}}
+            <a href="#"><li>{{senderSurname}} {{senderName}} </li></a>
             {{/js_if}}
           {{/js_if}}
           <div class="block block-strong row">
-            <div class="col"><a class="button convert-form-to-data" href ='#' @click="delete('{{expediteur}}','{{destinaireid}}','{{statut}}')">
-              {{#js_if "this.statut === 'en attente'"}}
+            <div class="col"><a class="button convert-form-to-data" href ='#' @click="delete('{{senderId}}','{{receiverId}}','{{status}}')">
+              {{#js_if "this.status === 'pending'"}}
                     Annuler la demande d'invitation
               {{else}}
-                  {{#js_if "this.statut === 'accepted'"}}
+                  {{#js_if "this.status === 'pending'"}}
                     Supprimer ce contact
                   {{/js_if}}
               {{/js_if}}</a></div>
@@ -51,7 +51,7 @@ return {
   async data() {
     let friends = [];
     try {
-      friends = await fetch("http://localhost:3000/friend")
+      friends = await fetch("http://localhost:3000/friends")
         .then(res => res.json())
     }catch(err) {
       this.$app.dialog.alert("Error " + err);
@@ -59,16 +59,16 @@ return {
     finally{
       let i = friends.length - 1
       while(i>=0){
-        if(friends[i].expediteur === this.$route.params.idd && friends[i].statut === 'refused'){
+        if(friends[i].senderId === this.$route.params.idd && friends[i].status === 'refused'){
           enleve_friend1=friends.splice(i,1);
         }
-        else if (friends[i].destinaireid === this.$route.params.idd && friends[i].statut === 'refused'){
+        else if (friends[i].receiverId === this.$route.params.idd && friends[i].status === 'refused'){
           enleve_friend2=friends.splice(i,1);
         }
-        else if(friends[i].destinaireid === this.$route.params.idd && friends[i].statut === 'en attente'){
+        else if(friends[i].receiverId === this.$route.params.idd && friends[i].status === 'pending'){
           enleve_friend3=friends.splice(i,1);
         }
-        else if(friends[i].expediteur !== this.$route.params.idd && friends[i].destinaireid !== this.$route.params.idd){
+        else if(friends[i].senderId !== this.$route.params.idd && friends[i].receiverId !== this.$route.params.idd){
           enleve_friend4=friends.splice(i,1);
         }
         i=i-1;
@@ -78,17 +78,17 @@ return {
     return { friends: friends };
   },
   methods: {
-    delete : function(idexp,iddest,statut){
-      fetch("http://localhost:3000/ami/" + idexp + '/' + iddest , {
+    delete : function(idexp,iddest,status){
+      fetch("http://localhost:3000/removefriend/" + idexp + '/' + iddest , {
           method: "DELETE",
       })
       .catch(err => this.$app.dialog.alert('Error ' + err))
       .finally(() => {
-          if(statut === 'en attente'){
-            this.$app.dialog.alert("Vous avez retiré votre demande d'ajouts")
+          if(status === 'pending'){
+            this.$app.dialog.alert("You canceled your friend request")
           }
-          else if(statut === 'accepted'){
-            this.$app.dialog.alert("Ce contact a été supprimé de votre liste d'amis")
+          else if(status === 'accepted'){
+            this.$app.dialog.alert("This person was removed from your friend list")
           }
           this.$router.navigate(
             {
