--- a/application7/src/client/www/pages/login.html
+++ b/application7/src/client/www/pages/login.html
@@ -5,7 +5,7 @@
         <div class="wrap-login100">
           <form class="login100-form validate-form">
             <span class="login100-form-title p-b-26">
-              Welcome
+              Welcome 
             </span>
             <span class="login100-form-title p-b-48">
               <i class="zmdi zmdi-font"></i>
@@ -38,7 +38,7 @@
                 Don’t have an account?
               </span>
   
-              <a class="button convert-form-to-data" href="/formulaire">
+              <a class="button convert-form-to-data" href="/register">
                 Sign Up
               </a>
             </div>
@@ -51,13 +51,32 @@
 
 </template>
 <script>
+  
+
 return {
     methods:{
+      handle_connected : function(jsonRes){
+        if (jsonRes.error){
+          app.dialog.alert(jsonRes.error);
+        } else {
+          localStorage.token = jsonRes.token;
+          app.data.user = {
+            name : jsonRes.name,
+            surname : jsonRes.surname,
+            id : jsonRes.id,
+            pseudo : "",
+            birthday : ""
+          }
+          this.$router.navigate('/home')
+      
+        } 
+      },
+
       login: async function() {
         let mail = document.getElementById('mail1').value
         let password = document.getElementById('password1').value
         try{
-          let reponse = await fetch("http://localhost:3000/login", {
+          let reponse = await fetch( app.data.serverAddress +"/login", {
             method: "POST",
             headers: { "Content-Type": "application/json" },
             body: JSON.stringify({
@@ -67,32 +86,10 @@ return {
           })
           .then(res =>res.json())
           // .then(res => (res.error) ? this.$app.dialog.alert(res.error) : this.$router.navigate('/profile/'+res.token))
-          .then(res => (res.error) ? this.$app.dialog.alert(res.error) : this.$router.navigate(
-            {
-              name: 'mapage',
-              params: {obj:res.token , monid : res.id , monnom : res.surname ,monprenom: res.name},
-            }))
-
-          //  this.$router.navigate(
-          // {
-          //   name: 'profil',
-          //   params: {obj:res.token , monid : res.id , monnom : res.lastname ,monprenom: res.firstname},
-          // }))
-          // .then(function(res){
-          //   if(res.error){
-          //     this.$app.dialog(res.error)
-          //   }
-          // })
-          //     this.$app.dialog.alert(res.error));
-          //   }
-          // )
-          //
-          // if(reponse.status === 400){
-          //   this.$app.dialog.alert('Vous devez saisir tous les champs');
-          // }
+          .then( this.handle_connected)
         }
         catch(err){
-          this.$app.dialog.alert('Error' + err);
+          app.dialog.alert('Error' + err);
         }
       }
     }
