--- a/application7/src/client/www/pages/notification.html
+++ b/application7/src/client/www/pages/notification.html
@@ -35,28 +35,28 @@ return{
   async data(){
     let myfriends = [];
     try {
-      myfriends = await fetch("http://localhost:3000/friends")
+      myfriends = await fetch( app.data.serverAddress +"/friends")
           .then(res => res.json())
     }
     catch(err) {
-      this.$app.dialog.alert("Error " + err);
+      app.dialog.alert("Error " + err);
     }
     finally{
       let i = myfriends.length-1
       //for (var i=0;i<myfriends.length;i++){
       while(i>=0){
-        if(myfriends[i].status === 'accepted' && myfriends[i].senderId === this.$route.params.myid){
-          this.$app.dialog.alert(myfriends[i].receiverSurname + ' ' + myfriends[i].receiverName + " a accepté votre demande d'ajouts")
+        if(myfriends[i].status === 'accepted' && myfriends[i].senderId === app.data.user.id){
+          app.dialog.alert(myfriends[i].receiverSurname + ' ' + myfriends[i].receiverName + " a accepté votre demande d'ajouts")
           enleve_friend = myfriends.splice(i,1);
         }
-        else if(myfriends[i].status === 'refused' && myfriends[i].senderId === this.$route.params.myid){
-            this.$app.dialog.alert(myfriends[i].receiverSurname + ' ' + myfriends[i].receiverName + " a refusé votre demande d'ajouts")
+        else if(myfriends[i].status === 'refused' && myfriends[i].senderId === app.data.user.id){
+            app.dialog.alert(myfriends[i].receiverSurname + ' ' + myfriends[i].receiverName + " a refusé votre demande d'ajouts")
             enleve_friend1 = myfriends.splice(i,1);
         }
-        else if(myfriends[i].status === 'pending' && myfriends[i].senderId === this.$route.params.myid){
+        else if(myfriends[i].status === 'pending' && myfriends[i].senderId === app.data.user.id){
             enleve_friend2 = myfriends.splice(i,1);
         }
-        else if(myfriends[i].senderId !== this.$route.params.myid && myfriends[i].receiverId !== this.$route.params.myid){
+        else if(myfriends[i].senderId !== app.data.user.id && myfriends[i].receiverId !== app.data.user.id){
           enleve_friend3 = myfriends.splice(i,1);
         }
         i=i-1
@@ -67,13 +67,13 @@ return{
   methods : {
     accepter: function(idexp,nomexp,prenomexp,nomdest,prenomdest){
       for(var i=0 ; i < this.myfriends.length ; i++){
-        if(this.myfriends[i].senderId === idexp && this.myfriends[i].receiverId === this.$route.params.myid){
-          fetch('http://localhost:3000/updateinvite', {
+        if(this.myfriends[i].senderId === idexp && this.myfriends[i].receiverId === app.data.user.id){
+          fetch( app.data.serverAddress +"/updateinvite", {
               method: 'PUT',
               headers: { "Content-Type": "application/json" },
               body: JSON.stringify({
-                senderId        : this.$route.params.myid,
-                receiverId      : idexp,
+                senderId        : idexp, 
+                receiverId      : app.data.user.id,
                 senderSurname   : nomexp,
                 senderName      : prenomexp,
                 receiverSurname : nomdest,
@@ -81,13 +81,12 @@ return{
                 status          : 'accepted',
               })
           })
-          .catch(err => this.$app.dialog.alert('Error ' + err))
+          .catch(err => app.dialog.alert('Error ' + err))
           .finally(() => {
-            this.$app.dialog.alert(nomexp + ' ' + prenomexp + " est désormais dans votre liste d'amis.")
+            app.dialog.alert(nomexp + ' ' + prenomexp + " est désormais dans votre liste d'amis.")
             this.$router.navigate(
               {
                 name:'friends',
-                params:{tokenn:this.$route.params.tokeen,idd:this.$route.params.myid,noom:this.$route.params.monnomm,prenoom:this.$route.params.monprenomm},
               }
             );
           })
@@ -96,13 +95,13 @@ return{
     },
     refuser: function(idexp,nomexp,prenomexp,nomdest,prenomdest){
       for(var i=0;i<this.myfriends.length;i++){
-        if(this.myfriends[i].senderId === idexp && this.myfriends[i].receiverId === this.$route.params.myid){
-          fetch('http://localhost:3000/updateinvit', {
+        if(this.myfriends[i].senderId === idexp && this.myfriends[i].receiverId === app.data.user.id){
+          fetch( app.data.serverAddress +"/updateinvite", {
               method: 'PUT',
               headers: { "Content-Type": "application/json" },
               body: JSON.stringify({
-                senderId        : this.$route.params.myid,
-                receiverId      : idexp,
+                senderId        : idexp,
+                receiverId      : app.data.user.id,
                 senderSurname   : nomexp,
                 senderName      : prenomexp,
                 receiverSurname : nomdest,
@@ -110,13 +109,12 @@ return{
                 status          : 'refused',
               })
           })
-          .catch(err => this.$app.dialog.alert('Error ' + err))
+          .catch(err => app.dialog.alert('Error ' + err))
           .finally(() => {
-            this.$app.dialog.alert("Vous avez refusé la demande d'ajout envoyée par " + nomexp + ' ' + prenomexp)
+            app.dialog.alert("Vous avez refusé la demande d'ajout envoyée par " + nomexp + ' ' + prenomexp)
             this.$router.navigate(
               {
                 name:'friends',
-                params:{tokenn:this.$route.params.tokeen,idd:this.$route.params.myid,noom:this.$route.params.monnomm,prenoom:this.$route.params.monprenomm},
               }
             );
           }) //finally
@@ -124,12 +122,7 @@ return{
       }
     },
     previouspage:function(){
-      this.$router.navigate(
-        {
-          name: 'mapage',
-          params:{obj:this.$route.params.tokeen,monid:this.$route.params.myid,monnom:this.$route.params.monnomm,monprenom:this.$route.params.monprenomm},
-        }
-      );
+      this.$router.navigate('/home');
     }
   }
 }
