--- a/application7/src/client/www/pages/addFriends.html
+++ b/application7/src/client/www/pages/addFriends.html
@@ -32,7 +32,7 @@ return {
     async data() {
       let users = [];
       try {
-        users = await fetch( app.data.serverAddress +"/users")
+        users = await app.methods.tokenHandlingFetch( "/users")
             .then(res => res.json())
       }
       catch(err) {
@@ -41,7 +41,7 @@ return {
 
       let friends = [];
       try {
-        friends = await fetch( app.data.serverAddress +"/friends")
+        friends = await app.methods.tokenHandlingFetch("/friends")
           .then(response => response.json())
       }
       catch(err){
@@ -74,7 +74,7 @@ return {
     },
     methods : {
       add: function(nom,prenom,id) {
-        fetch( app.data.serverAddress +"/invite", {
+        app.methods.tokenHandlingFetch( "/invite", {
               method: 'POST',
               headers: { "Content-Type": "application/json" },
               body: JSON.stringify({
