--- a/application7/src/client/www/pages/friendList.html
+++ b/application7/src/client/www/pages/friendList.html
@@ -51,7 +51,7 @@ return {
   async data() {
     let friends = [];
     try {
-      friends = await fetch( app.data.serverAddress +"/friends")
+      friends = await app.methods.tokenHandlingFetch( "/friends")
         .then(res => res.json())
     }catch(err) {
       app.dialog.alert("Error " + err);
@@ -79,7 +79,7 @@ return {
   },
   methods: {
     delete : function(idexp,iddest,status){
-      fetch( app.data.serverAddress +"/removefriend/" + idexp + '/' + iddest , {
+      app.methods.tokenHandlingFetch( "/removefriend/" + idexp + '/' + iddest , {
           method: "DELETE",
       })
       .catch(err => app.dialog.alert('Error ' + err))
